--- a/lego/read.html
+++ b/lego/read.html
@@ -877,18 +877,25 @@
       <td>quantum mechanics,qed,biography,physics</td>
     </tr>
     <tr>
-      <td>Lessons</td>
-      <td>Ian McEwan</td>
-      <td>2022</td>
-      <td>NaN</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>A Thousand Brains: A New Theory of Intelligence</td>
       <td>Jeff Hawkins</td>
       <td>2021</td>
       <td>NaN</td>
       <td>neuroscience,artificial intelligence</td>
+    </tr>
+    <tr>
+      <td>Johann Sebastian Bach</td>
+      <td>Christoph Wolff</td>
+      <td>2001</td>
+      <td>NaN</td>
+      <td>music,biography,bach,baroque</td>
+    </tr>
+    <tr>
+      <td>Lessons</td>
+      <td>Ian McEwan</td>
+      <td>2022</td>
+      <td>NaN</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>The Alignment Problem</td>
@@ -909,7 +916,7 @@
       <td>Daniel C. Dennett</td>
       <td>2014</td>
       <td>NaN</td>
-      <td>NaN</td>
+      <td>philosophy</td>
     </tr>
     <tr>
       <td>God: The Most Unpleasant Character in All Fiction</td>
@@ -917,13 +924,6 @@
       <td>2016</td>
       <td>NaN</td>
       <td>christianity,religion,bible</td>
-    </tr>
-    <tr>
-      <td>Johann Sebastian Bach</td>
-      <td>Christoph Wolff</td>
-      <td>2001</td>
-      <td>NaN</td>
-      <td>music,biography,bach,baroque</td>
     </tr>
     <tr>
       <td>A History of Christianity: The First Three Thousand Years</td>
