--- a/lego/read_queue.html
+++ b/lego/read_queue.html
@@ -11,9 +11,9 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td>Benjamin Franklin: An American Life</td>
-      <td>2004</td>
-      <td>Walter Isaacson</td>
+      <td>Reality+: Virtual Worlds and the Problems of Philosophy</td>
+      <td>2022</td>
+      <td>David J. Chalmers</td>
       <td>hardcover</td>
     </tr>
     <tr>
@@ -25,6 +25,13 @@
     </tr>
     <tr>
       <th>2</th>
+      <td>Benjamin Franklin: An American Life</td>
+      <td>2004</td>
+      <td>Walter Isaacson</td>
+      <td>hardcover</td>
+    </tr>
+    <tr>
+      <th>3</th>
       <td>Thomas Jefferson: The Art of Power</td>
       <td>2013</td>
       <td>Jon Meacham</td>
