read.txt updates

--- a/lego/read.html
+++ b/lego/read.html
@@ -184,6 +184,20 @@
   </thead>
   <tbody>
     <tr>
+      <td>Six Impossible Things: The Mysteries of the Quantum World</td>
+      <td>John Gribbin</td>
+      <td>2019</td>
+      <td>2024-05-02</td>
+      <td>quantum physics theoretical physics</td>
+    </tr>
+    <tr>
+      <td>Johann Sebastian Bach: The Learned Musician</td>
+      <td>Christoph Wolff</td>
+      <td>2001</td>
+      <td>2024-05-01</td>
+      <td>music bach baroque biography</td>
+    </tr>
+    <tr>
       <td>A Thousand Brains: A New Theory of Intelligence</td>
       <td>Jeff Hawkins</td>
       <td>2021</td>
@@ -889,13 +903,6 @@
       <td>1997</td>
       <td>NaN</td>
       <td>consciousness philosophy</td>
-    </tr>
-    <tr>
-      <td>Johann Sebastian Bach: The Learned Musician</td>
-      <td>Christoph Wolff</td>
-      <td>2001</td>
-      <td>NaN</td>
-      <td>music bach baroque biography</td>
     </tr>
     <tr>
       <td>A History of Christianity: The First Three Thousand Years</td>
