--- a/lego/read.html
+++ b/lego/read.html
@@ -946,6 +946,20 @@
       <td>NaN</td>
       <td>neuroscience philosophy free will biology</td>
     </tr>
+    <tr>
+      <td>Touching a Nerve: The Self as Brain</td>
+      <td>Patricia S. Churchland</td>
+      <td>2013</td>
+      <td>NaN</td>
+      <td>philosophy neuroscience mind</td>
+    </tr>
+    <tr>
+      <td>Kitchen Confidential: Adventures in the Culinary Underbelly</td>
+      <td>Anthony Bourdain</td>
+      <td>2000</td>
+      <td>NaN</td>
+      <td>food restaurants culinary industry</td>
+    </tr>
   </tbody>
 </table>
 
