--- a/lego/read.html
+++ b/lego/read.html
@@ -184,6 +184,13 @@
   </thead>
   <tbody>
     <tr>
+      <td>Kitchen Confidential: Adventures in the Culinary Underbelly</td>
+      <td>Anthony Bourdain</td>
+      <td>2000</td>
+      <td>2024-05-11</td>
+      <td>food restaurants culinary industry</td>
+    </tr>
+    <tr>
       <td>Touching a Nerve: The Self as Brain</td>
       <td>Patricia S. Churchland</td>
       <td>2013</td>
@@ -311,7 +318,7 @@
     </tr>
     <tr>
       <td>Behave</td>
-      <td>Robert Sapolsky</td>
+      <td>Robert M. Sapolsky</td>
       <td>2017</td>
       <td>2023-11-13</td>
       <td>neuroscience biology psychology endocrinology</td>
@@ -398,7 +405,7 @@
       <td>Stephen Hawking</td>
       <td>1988</td>
       <td>2023-05-03</td>
-      <td>physics</td>
+      <td>physics cosmology</td>
     </tr>
     <tr>
       <td>The Order of Time</td>
@@ -643,7 +650,7 @@
       <td>Brian Greene</td>
       <td>1999</td>
       <td>2022-07-24</td>
-      <td>theoretical physics string theory science</td>
+      <td>theoretical physics string theory science cosmology</td>
     </tr>
     <tr>
       <td>Factfulness</td>
@@ -685,7 +692,7 @@
       <td>Martin Rees</td>
       <td>2001</td>
       <td>2022-06-04</td>
-      <td>physics science cosmology astrophysics</td>
+      <td>physics science cosmology astrophysics cosmology</td>
     </tr>
     <tr>
       <td>Hitch-22</td>
@@ -706,7 +713,7 @@
       <td>David Deutsch</td>
       <td>2011</td>
       <td>2022-05-09</td>
-      <td>physics science philosophy artificial intelligence</td>
+      <td>physics science philosophy artificial intelligence cosmology</td>
     </tr>
     <tr>
       <td>On Color</td>
@@ -762,7 +769,7 @@
       <td>Sean Carroll</td>
       <td>2017</td>
       <td>2022-04-03</td>
-      <td>physics science</td>
+      <td>physics science cosmology</td>
     </tr>
     <tr>
       <td>The Odyssey</td>
@@ -912,11 +919,18 @@
       <td>consciousness philosophy</td>
     </tr>
     <tr>
+      <td>White Holes</td>
+      <td>Carlo Rovelli</td>
+      <td>2023</td>
+      <td>NaN</td>
+      <td>astrophysics cosmology</td>
+    </tr>
+    <tr>
       <td>A History of Christianity: The First Three Thousand Years</td>
       <td>Diarmaid MacCulloch</td>
       <td>2009</td>
       <td>NaN</td>
-      <td>christianity religion history catholicism judaism</td>
+      <td>christianity religion history catholicism judaism islam</td>
     </tr>
     <tr>
       <td>Lessons</td>
@@ -951,14 +965,7 @@
       <td>Robert M. Sapolsky</td>
       <td>2023</td>
       <td>NaN</td>
-      <td>neuroscience philosophy free will biology</td>
-    </tr>
-    <tr>
-      <td>Kitchen Confidential: Adventures in the Culinary Underbelly</td>
-      <td>Anthony Bourdain</td>
-      <td>2000</td>
-      <td>NaN</td>
-      <td>food restaurants culinary industry</td>
+      <td>determinism neuroscience free will philosophy biology</td>
     </tr>
   </tbody>
 </table>
