--- a/lego/read_queue.html
+++ b/lego/read_queue.html
@@ -37,5 +37,12 @@
       <td>Jon Meacham</td>
       <td>hardcover</td>
     </tr>
+    <tr>
+      <th>4</th>
+      <td>DNA: The Secret of Life</td>
+      <td>2003</td>
+      <td>James D. Watson</td>
+      <td>hardcover</td>
+    </tr>
   </tbody>
 </table>
