--- a/lego/read.html
+++ b/lego/read.html
@@ -184,11 +184,18 @@
   </thead>
   <tbody>
     <tr>
+      <td>White Holes</td>
+      <td>Carlo Rovelli</td>
+      <td>2023</td>
+      <td>2024-05-12</td>
+      <td>astrophysics cosmology</td>
+    </tr>
+    <tr>
       <td>Kitchen Confidential: Adventures in the Culinary Underbelly</td>
       <td>Anthony Bourdain</td>
       <td>2000</td>
       <td>2024-05-11</td>
-      <td>food restaurants culinary industry</td>
+      <td>food restaurants culinary industry autobiography</td>
     </tr>
     <tr>
       <td>Touching a Nerve: The Self as Brain</td>
@@ -912,18 +919,18 @@
       <td>running endurance sports psychology fitness biology</td>
     </tr>
     <tr>
+      <td>Isaac Newton</td>
+      <td>James Gleick</td>
+      <td>2004</td>
+      <td>NaN</td>
+      <td>physics newtonian mechanics enlightenment biography</td>
+    </tr>
+    <tr>
       <td>The Conscious Mind</td>
       <td>David J. Chalmers</td>
       <td>1997</td>
       <td>NaN</td>
       <td>consciousness philosophy</td>
-    </tr>
-    <tr>
-      <td>White Holes</td>
-      <td>Carlo Rovelli</td>
-      <td>2023</td>
-      <td>NaN</td>
-      <td>astrophysics cosmology</td>
     </tr>
     <tr>
       <td>A History of Christianity: The First Three Thousand Years</td>
