--- a/lego/read.html
+++ b/lego/read.html
@@ -6,17 +6,25 @@
   </head>
 
   <input
-    type="text" id="titleName" onkeyup="nameSearch()"
-    placeholder="Search for title.." title="Type in a title">
+    type="text" id="titleName"
+    onkeyup="nameSearch()"
+    placeholder="Search for title.."
+    title="Type in a title">
   <input
-    type="text" id="authorName" onkeyup="authorSearch()"
-    placeholder="Search for author.." title="Type in a author">
+    type="text" id="authorName"
+    onkeyup="authorSearch()"
+    placeholder="Search for author.."
+    title="Type in a author">
   <input
-    type="text" id="kwName" onkeyup="kwSearch()"
-    placeholder="Search for keyword.." title="Type in a keyword">
+    type="text" id="kwName"
+    onkeyup="kwSearch()"
+    placeholder="Search for keyword.."
+    title="Type in a keyword">
   <input
-    type="text" id="readDate" onkeyup="readSearch()"
-    placeholder="Type in a year.." title="Type in a date">
+    type="text" id="readDate"
+    onkeyup="readSearch()"
+    placeholder="Type in a year.."
+    title="Type in a date">
   
 
 
@@ -138,8 +146,7 @@
 	}
       }
     }
-	  
-	  
+    
   </script>
 
   <style>
@@ -180,8 +187,6 @@
 
     
 
-
-
 <table border="1" class="dataframe" id="readTxt">
   <thead>
     <tr style="text-align: left;">
@@ -194,6 +199,14 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>aa114</td>
+      <td>In a Different Key: The Story of Autism</td>
+      <td>John Donvan, Caren Zucker</td>
+      <td>2016</td>
+      <td>2024-05-24</td>
+      <td>autism neuroscience</td>
+    </tr>
     <tr>
       <td>aa113</td>
       <td>Isaac Newton</td>
@@ -1041,14 +1054,6 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
-    </tr>
-    <tr>
-      <td>aa114</td>
-      <td>In a Different Key: The Story of Autism</td>
-      <td>John Donvan, Caren Zucker</td>
-      <td>2016</td>
-      <td>NaN</td>
-      <td>autism neuroscience</td>
     </tr>
     <tr>
       <td>aa097</td>
