--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa115</td>
+      <td>A Universe from Nothing: Why There is Something from Nothing</td>
+      <td>Lawrence M. Krauss</td>
+      <td>2012</td>
+      <td>2024-05-29</td>
+      <td>astrophysics cosmology theoretical physics</td>
+    </tr>
+    <tr>
       <td>aa114</td>
       <td>In a Different Key: The Story of Autism</td>
       <td>John Donvan, Caren Zucker</td>
@@ -1054,6 +1062,14 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
+    </tr>
+    <tr>
+      <td>aa116</td>
+      <td>Invisible Women: Data Bias in a World Designed for Men</td>
+      <td>Caroline Criado-Perez</td>
+      <td>2019</td>
+      <td>NaN</td>
+      <td>2024-06-03</td>
     </tr>
     <tr>
       <td>aa097</td>
