--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa116</td>
+      <td>Invisible Women: Data Bias in a World Designed for Men</td>
+      <td>Caroline Criado-Perez</td>
+      <td>2019</td>
+      <td>2024-06-03</td>
+      <td>data bias</td>
+    </tr>
+    <tr>
       <td>aa115</td>
       <td>A Universe from Nothing: Why There is Something from Nothing</td>
       <td>Lawrence M. Krauss</td>
@@ -1062,14 +1070,6 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
-    </tr>
-    <tr>
-      <td>aa116</td>
-      <td>Invisible Women: Data Bias in a World Designed for Men</td>
-      <td>Caroline Criado-Perez</td>
-      <td>2019</td>
-      <td>NaN</td>
-      <td>2024-06-03</td>
     </tr>
     <tr>
       <td>aa097</td>
