--- a/lego/read.html
+++ b/lego/read.html
@@ -200,12 +200,20 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa117</td>
+      <td>Elizabeth Finch</td>
+      <td>Julian Barnes</td>
+      <td>2022</td>
+      <td>2024-06-05</td>
+      <td>fiction christianity apostacy roman</td>
+    </tr>
+    <tr>
       <td>aa116</td>
       <td>Invisible Women: Data Bias in a World Designed for Men</td>
       <td>Caroline Criado-Perez</td>
       <td>2019</td>
       <td>2024-06-03</td>
-      <td>data bias</td>
+      <td>data bias women feminism</td>
     </tr>
     <tr>
       <td>aa115</td>
@@ -1070,6 +1078,22 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
+    </tr>
+    <tr>
+      <td>aa118</td>
+      <td>Nothing to Be Afraid Of</td>
+      <td>Julian Barnes</td>
+      <td>2008</td>
+      <td>NaN</td>
+      <td>memoir autobiography faith atheism agnosticism</td>
+    </tr>
+    <tr>
+      <td>aa119</td>
+      <td>Illiberal America: A History</td>
+      <td>Steven Hahn</td>
+      <td>2024</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <td>aa097</td>
