--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa119</td>
+      <td>Illiberal America: A History</td>
+      <td>Steven Hahn</td>
+      <td>2024</td>
+      <td>2024-06-19</td>
+      <td>illiberalism democracy american history</td>
+    </tr>
+    <tr>
       <td>aa117</td>
       <td>Elizabeth Finch</td>
       <td>Julian Barnes</td>
@@ -1086,14 +1094,6 @@
       <td>2008</td>
       <td>NaN</td>
       <td>memoir autobiography faith atheism agnosticism</td>
-    </tr>
-    <tr>
-      <td>aa119</td>
-      <td>Illiberal America: A History</td>
-      <td>Steven Hahn</td>
-      <td>2024</td>
-      <td>NaN</td>
-      <td>NaN</td>
     </tr>
     <tr>
       <td>aa097</td>
