testing read.html links

--- a/lego/read.html
+++ b/lego/read.html
@@ -969,7 +969,7 @@
     </tr>
     <tr>
       <td>aa015</td>
-      <td>Eat &amp; Run</td>
+      <td>Eat & Run</td>
       <td>Scott Jurek</td>
       <td>2013</td>
       <td>2021-11-20</td>
