fixes to books-html

--- a/lego/read.html
+++ b/lego/read.html
@@ -200,7 +200,7 @@
   </thead>
   <tbody>
     <tr>
-      <td>aa119</td>
+      <td><a href="https://jd2504.github.io/lego/aa119.txt">aa119</a></td>
       <td>Illiberal America: A History</td>
       <td>Steven Hahn</td>
       <td>2024</td>
@@ -216,7 +216,7 @@
       <td>fiction christianity apostacy roman</td>
     </tr>
     <tr>
-      <td>aa116</td>
+      <td><a href="https://jd2504.github.io/lego/aa116.txt">aa116</a></td>
       <td>Invisible Women: Data Bias in a World Designed for Men</td>
       <td>Caroline Criado-Perez</td>
       <td>2019</td>
@@ -256,7 +256,7 @@
       <td>astrophysics cosmology</td>
     </tr>
     <tr>
-      <td>aa111</td>
+      <td><a href="https://jd2504.github.io/lego/aa111.txt">aa111</a></td>
       <td>Kitchen Confidential: Adventures in the Culinary Underbelly</td>
       <td>Anthony Bourdain</td>
       <td>2000</td>
@@ -288,7 +288,7 @@
       <td>music bach baroque biography</td>
     </tr>
     <tr>
-      <td>aa098</td>
+      <td><a href="https://jd2504.github.io/lego/aa098.txt">aa098</a></td>
       <td>A Thousand Brains: A New Theory of Intelligence</td>
       <td>Jeff Hawkins</td>
       <td>2021</td>
@@ -336,7 +336,7 @@
       <td>fiction comic</td>
     </tr>
     <tr>
-      <td>aa094</td>
+      <td><a href="https://jd2504.github.io/lego/aa094.txt">aa094</a></td>
       <td>Not In Our Genes</td>
       <td>Richard C. Lewontin, Steven Rose, Leon J. Kamin</td>
       <td>1984</td>
