--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa118</td>
+      <td>Nothing to Be Afraid Of</td>
+      <td>Julian Barnes</td>
+      <td>2008</td>
+      <td>2024-06-25</td>
+      <td>memoir autobiography faith atheism death</td>
+    </tr>
+    <tr>
       <td><a href="https://jd2504.github.io/lego/aa119.txt">aa119</a></td>
       <td>Illiberal America: A History</td>
       <td>Steven Hahn</td>
@@ -720,20 +728,20 @@
       <td>artificial intelligence agi</td>
     </tr>
     <tr>
-      <td>aa046</td>
-      <td>Pnin</td>
-      <td>Vladimir Nabokov</td>
-      <td>1957</td>
-      <td>2022-08-14</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>aa045</td>
       <td>The Rational Optimist</td>
       <td>Matt Ridley</td>
       <td>2010</td>
       <td>2022-08-14</td>
       <td>reason economics</td>
+    </tr>
+    <tr>
+      <td>aa046</td>
+      <td>Pnin</td>
+      <td>Vladimir Nabokov</td>
+      <td>1957</td>
+      <td>2022-08-14</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>aa044</td>
@@ -1088,12 +1096,12 @@
       <td>running endurance sports psychology fitness biology</td>
     </tr>
     <tr>
-      <td>aa118</td>
-      <td>Nothing to Be Afraid Of</td>
-      <td>Julian Barnes</td>
-      <td>2008</td>
+      <td>aa120</td>
+      <td>Being You: A New Science of Consciousness</td>
+      <td>Anil Seth</td>
+      <td>2021</td>
       <td>NaN</td>
-      <td>memoir autobiography faith atheism agnosticism</td>
+      <td>consciousness neuroscience</td>
     </tr>
     <tr>
       <td>aa097</td>
