--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa121</td>
+      <td>The Disordered Mind</td>
+      <td>Eric R. Kandel</td>
+      <td>2018</td>
+      <td>2024-06-30</td>
+      <td>neuroscience mind disorders</td>
+    </tr>
+    <tr>
       <td>aa118</td>
       <td>Nothing to Be Afraid Of</td>
       <td>Julian Barnes</td>
@@ -1094,6 +1102,14 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
+    </tr>
+    <tr>
+      <td>aa122</td>
+      <td>Human Compatible: Artificial Intelligence and the Problem of Control</td>
+      <td>Stuart Russell</td>
+      <td>2019</td>
+      <td>NaN</td>
+      <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
       <td>aa120</td>
