--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa122</td>
+      <td>Human Compatible: Artificial Intelligence and the Problem of Control</td>
+      <td>Stuart Russell</td>
+      <td>2019</td>
+      <td>2024-07-08</td>
+      <td>artificial intelligence control problem alignment</td>
+    </tr>
+    <tr>
       <td>aa121</td>
       <td>The Disordered Mind</td>
       <td>Eric R. Kandel</td>
@@ -1104,12 +1112,12 @@
       <td>running endurance sports psychology fitness biology</td>
     </tr>
     <tr>
-      <td>aa122</td>
-      <td>Human Compatible: Artificial Intelligence and the Problem of Control</td>
-      <td>Stuart Russell</td>
-      <td>2019</td>
+      <td>aa123</td>
+      <td>Dark and Magical Places: The Neuroscience of Navigation</td>
+      <td>Christopher Kemp</td>
+      <td>2022</td>
       <td>NaN</td>
-      <td>artificial intelligence control problem alignment</td>
+      <td>neuroscience navigation hippocampus place cells grid cells</td>
     </tr>
     <tr>
       <td>aa120</td>
@@ -1149,7 +1157,7 @@
       <td>Brian Christian</td>
       <td>2020</td>
       <td>NaN</td>
-      <td>artificial intelligence</td>
+      <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
       <td>aa099</td>
