--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa123</td>
+      <td>Dark and Magical Places: The Neuroscience of Navigation</td>
+      <td>Christopher Kemp</td>
+      <td>2022</td>
+      <td>2024-07-14</td>
+      <td>neuroscience navigation hippocampus place cells grid cells</td>
+    </tr>
+    <tr>
       <td>aa122</td>
       <td>Human Compatible: Artificial Intelligence and the Problem of Control</td>
       <td>Stuart Russell</td>
@@ -1112,12 +1120,12 @@
       <td>running endurance sports psychology fitness biology</td>
     </tr>
     <tr>
-      <td>aa123</td>
-      <td>Dark and Magical Places: The Neuroscience of Navigation</td>
-      <td>Christopher Kemp</td>
-      <td>2022</td>
+      <td>aa124</td>
+      <td>The Extended Mind</td>
+      <td>Annie M. Paul</td>
+      <td>2021</td>
       <td>NaN</td>
-      <td>neuroscience navigation hippocampus place cells grid cells</td>
+      <td>neuroscience extended mind</td>
     </tr>
     <tr>
       <td>aa120</td>
