--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa124</td>
+      <td>The Extended Mind</td>
+      <td>Annie M. Paul</td>
+      <td>2021</td>
+      <td>2024-07-19</td>
+      <td>neuroscience extended mind</td>
+    </tr>
+    <tr>
       <td>aa123</td>
       <td>Dark and Magical Places: The Neuroscience of Navigation</td>
       <td>Christopher Kemp</td>
@@ -1120,12 +1128,12 @@
       <td>running endurance sports psychology fitness biology</td>
     </tr>
     <tr>
-      <td>aa124</td>
-      <td>The Extended Mind</td>
-      <td>Annie M. Paul</td>
-      <td>2021</td>
+      <td>aa125</td>
+      <td>Schoenberg</td>
+      <td>Harvey Sachs</td>
+      <td>2023</td>
       <td>NaN</td>
-      <td>neuroscience extended mind</td>
+      <td>music biography schoenberg serialism</td>
     </tr>
     <tr>
       <td>aa120</td>
