--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa126</td>
+      <td>The Myth of Artificial Intelligence</td>
+      <td>Erik J. Larson</td>
+      <td>2021</td>
+      <td>2024-08-02</td>
+      <td>artificial intelligence</td>
+    </tr>
+    <tr>
       <td>aa125</td>
       <td>Schoenberg</td>
       <td>Harvey Sachs</td>
@@ -1134,6 +1142,14 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
+    </tr>
+    <tr>
+      <td>aa127</td>
+      <td>The Genome Defense</td>
+      <td>Jorge L. Contreras</td>
+      <td>2021</td>
+      <td>NaN</td>
+      <td>genomics genetics law</td>
     </tr>
     <tr>
       <td>aa120</td>
