--- a/lego/read.html
+++ b/lego/read.html
@@ -200,6 +200,14 @@
   </thead>
   <tbody>
     <tr>
+      <td>aa128</td>
+      <td>Frankenstein; or, The Modern Prometheus</td>
+      <td>Mary Shelley</td>
+      <td>1818</td>
+      <td>2024-08-19</td>
+      <td>horror science fiction scifi</td>
+    </tr>
+    <tr>
       <td>aa126</td>
       <td>The Myth of Artificial Intelligence</td>
       <td>Erik J. Larson</td>
@@ -1142,6 +1150,14 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
+    </tr>
+    <tr>
+      <td>aa129</td>
+      <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
+      <td>Chiara Marletto</td>
+      <td>2021</td>
+      <td>NaN</td>
+      <td>physics counterfactuals science</td>
     </tr>
     <tr>
       <td>aa127</td>
