--- a/lego/read.html
+++ b/lego/read.html
@@ -24,7 +24,8 @@
     type="text" id="readDate"
     onkeyup="readSearch()"
     placeholder="Type in a year.."
-    title="Type in a date">
+    title="Type in a date"
+    value="2024">
   
 
 
@@ -179,7 +180,7 @@
   </style>
 
 
-  <body>
+  <body onload="readSearch()">
     <font size="2" face="Arial" >
       <h1>e-book of books</h1>
 
