--- a/lego/read.html
+++ b/lego/read.html
@@ -241,6 +241,14 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
+      <td>aa130</td>
+      <td>Knife</td>
+      <td>Salman Rushdie</td>
+      <td>2024</td>
+      <td>2024-09-10</td>
+      <td>memoir</td>
+    </tr>
+    <tr>
       <td>aa128</td>
       <td>Frankenstein; or, The Modern Prometheus</td>
       <td>Mary Shelley</td>
