--- a/lego/read.html
+++ b/lego/read.html
@@ -225,20 +225,28 @@
       <td>consciousness philosophy</td>
     </tr>
     <tr>
-      <td>aa127</td>
-      <td>The Genome Defense</td>
-      <td>Jorge L. Contreras</td>
-      <td>2021</td>
-      <td>2024-99-99</td>
-      <td>genomics genetics law</td>
-    </tr>
-    <tr>
       <td>aa129</td>
       <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
       <td>Chiara Marletto</td>
       <td>2021</td>
       <td>2024-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa131</td>
+      <td>Genome</td>
+      <td>Matt Ridley</td>
+      <td>2011</td>
+      <td>2024-99-99</td>
+      <td>genomics genetics</td>
+    </tr>
+    <tr>
+      <td>aa127</td>
+      <td>The Genome Defense</td>
+      <td>Jorge L. Contreras</td>
+      <td>2021</td>
+      <td>2024-09-24</td>
+      <td>genomics genetics law</td>
     </tr>
     <tr>
       <td>aa130</td>
