--- a/lego/read.html
+++ b/lego/read.html
@@ -233,11 +233,27 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
+      <td>aa133</td>
+      <td>The End of Race Politics</td>
+      <td>Coleman Hughes</td>
+      <td>2024</td>
+      <td>2024-99-99</td>
+      <td>race racism</td>
+    </tr>
+    <tr>
+      <td>aa132</td>
+      <td>Reductionism in Art and Brain Science</td>
+      <td>Eric R. Kandel</td>
+      <td>2016</td>
+      <td>2024-10-18</td>
+      <td>art modernism abstract expressionism neuroscience brain perception</td>
+    </tr>
+    <tr>
       <td>aa131</td>
       <td>Genome</td>
       <td>Matt Ridley</td>
       <td>2011</td>
-      <td>2024-99-99</td>
+      <td>2024-10-16</td>
       <td>genomics genetics</td>
     </tr>
     <tr>
