--- a/lego/read.html
+++ b/lego/read.html
@@ -233,6 +233,14 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
+      <td>aa134</td>
+      <td>In Search of Memory</td>
+      <td>Eric R. Kandel</td>
+      <td>2018</td>
+      <td>2024-99-99</td>
+      <td>neuroscience autobiography wwii</td>
+    </tr>
+    <tr>
       <td>aa133</td>
       <td>The End of Race Politics</td>
       <td>Coleman Hughes</td>
