--- a/lego/read.html
+++ b/lego/read.html
@@ -233,12 +233,28 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
+      <td>aa136</td>
+      <td>A Brief History of Everyone Who Ever Lived: The Human Story Retold Through Our Genes</td>
+      <td>Adam Rutherford</td>
+      <td>2017</td>
+      <td>2024-99-99</td>
+      <td>genetics genomics evolutionary biology</td>
+    </tr>
+    <tr>
       <td>aa134</td>
       <td>In Search of Memory</td>
       <td>Eric R. Kandel</td>
       <td>2018</td>
-      <td>2024-99-99</td>
+      <td>2024-12-05</td>
       <td>neuroscience autobiography wwii</td>
+    </tr>
+    <tr>
+      <td>aa135</td>
+      <td>The Age of Insight: The Quest to Understand the Unconscious in Art, Mind, and Brain, from Vienna 1900 to the Present</td>
+      <td>Eric R. Kandel</td>
+      <td>2012</td>
+      <td>2024-12-03</td>
+      <td>art modernism expressionism schiele kokoschka klimt symbolism neuroscience brain unconscious</td>
     </tr>
     <tr>
       <td>aa133</td>
