--- a/lego/read.html
+++ b/lego/read.html
@@ -233,6 +233,14 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
+      <td>aa137</td>
+      <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
+      <td>Jerry A. Fodor</td>
+      <td>2001</td>
+      <td>2024-99-99</td>
+      <td>philosophy mind computational neuroscience psychology</td>
+    </tr>
+    <tr>
       <td>aa136</td>
       <td>A Brief History of Everyone Who Ever Lived: The Human Story Retold Through Our Genes</td>
       <td>Adam Rutherford</td>
