--- a/lego/read.html
+++ b/lego/read.html
@@ -241,15 +241,23 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
+      <td>aa138</td>
+      <td>The Runaway Species</td>
+      <td>Anthony Brandt; David Eagleman</td>
+      <td>2017</td>
+      <td>2024-12-22</td>
+      <td>neuroscience anthropology art creativity</td>
+    </tr>
+    <tr>
       <td>aa136</td>
       <td>A Brief History of Everyone Who Ever Lived: The Human Story Retold Through Our Genes</td>
       <td>Adam Rutherford</td>
       <td>2017</td>
-      <td>2024-99-99</td>
+      <td>2024-12-18</td>
       <td>genetics genomics evolutionary biology</td>
     </tr>
     <tr>
-      <td>aa134</td>
+      <td><a href="https://jd2504.github.io/lego/aa134.txt">aa134</a></td>
       <td>In Search of Memory</td>
       <td>Eric R. Kandel</td>
       <td>2018</td>
@@ -257,7 +265,7 @@
       <td>neuroscience autobiography wwii</td>
     </tr>
     <tr>
-      <td>aa135</td>
+      <td><a href="https://jd2504.github.io/lego/aa135.txt">aa135</a></td>
       <td>The Age of Insight: The Quest to Understand the Unconscious in Art, Mind, and Brain, from Vienna 1900 to the Present</td>
       <td>Eric R. Kandel</td>
       <td>2012</td>
