--- a/lego/read.html
+++ b/lego/read.html
@@ -257,7 +257,7 @@
       <td>genetics genomics evolutionary biology</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa134.txt">aa134</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa134.pdf">aa134</a></td>
       <td>In Search of Memory</td>
       <td>Eric R. Kandel</td>
       <td>2018</td>
@@ -265,7 +265,7 @@
       <td>neuroscience autobiography wwii</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa135.txt">aa135</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa135.pdf">aa135</a></td>
       <td>The Age of Insight: The Quest to Understand the Unconscious in Art, Mind, and Brain, from Vienna 1900 to the Present</td>
       <td>Eric R. Kandel</td>
       <td>2012</td>
