--- a/lego/read.html
+++ b/lego/read.html
@@ -260,7 +260,7 @@
       <td><a href="https://jd2504.github.io/lego/aa134.pdf">aa134</a></td>
       <td>In Search of Memory</td>
       <td>Eric R. Kandel</td>
-      <td>2018</td>
+      <td>2007</td>
       <td>2024-12-05</td>
       <td>neuroscience autobiography wwii</td>
     </tr>
@@ -370,7 +370,7 @@
     </tr>
     <tr>
       <td>aa118</td>
-      <td>Nothing to Be Afraid Of</td>
+      <td>Nothing to Be Frightened Of</td>
       <td>Julian Barnes</td>
       <td>2008</td>
       <td>2024-06-25</td>
