--- a/lego/head.html
+++ b/lego/head.html
@@ -25,9 +25,7 @@
     onkeyup="readSearch()"
     placeholder="Type in a year.."
     title="Type in a date"
-    value="2024">
-  
-
+    value="2025">
 
   
   
@@ -184,7 +182,7 @@
     <font size="2" face="Arial" >
       <h1>e-book of books</h1>
 
-      notes and log of what's come off the shelf, starting 2021...
+      what I've taken from the off the shelf, since 2021...
 
     
 
