--- a/lego/read.html
+++ b/lego/read.html
@@ -25,9 +25,7 @@
     onkeyup="readSearch()"
     placeholder="Type in a year.."
     title="Type in a date"
-    value="2024">
-  
-
+    value="2025">
 
   
   
@@ -184,7 +182,7 @@
     <font size="2" face="Arial" >
       <h1>e-book of books</h1>
 
-      notes and log of what's come off the shelf, starting 2021...
+      what I've taken from the off the shelf, since 2021...
 
     
 
@@ -201,19 +199,11 @@
   </thead>
   <tbody>
     <tr>
-      <td>aa100</td>
-      <td>The Alignment Problem</td>
-      <td>Brian Christian</td>
-      <td>2020</td>
-      <td>2024-99-99</td>
-      <td>artificial intelligence control problem alignment</td>
-    </tr>
-    <tr>
       <td>aa107</td>
       <td>A History of Christianity: The First Three Thousand Years</td>
       <td>Diarmaid MacCulloch</td>
       <td>2009</td>
-      <td>2024-99-99</td>
+      <td>2025-99-99</td>
       <td>christianity religion history catholicism judaism islam</td>
     </tr>
     <tr>
@@ -221,7 +211,7 @@
       <td>The Conscious Mind</td>
       <td>David J. Chalmers</td>
       <td>1997</td>
-      <td>2024-99-99</td>
+      <td>2025-99-99</td>
       <td>consciousness philosophy</td>
     </tr>
     <tr>
@@ -229,7 +219,7 @@
       <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
       <td>Chiara Marletto</td>
       <td>2021</td>
-      <td>2024-99-99</td>
+      <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
@@ -237,8 +227,40 @@
       <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
       <td>Jerry A. Fodor</td>
       <td>2001</td>
-      <td>2024-99-99</td>
+      <td>2025-99-99</td>
       <td>philosophy mind computational neuroscience psychology</td>
+    </tr>
+    <tr>
+      <td>aa141</td>
+      <td>Out Mathematical Universe</td>
+      <td>Max Tegmark</td>
+      <td>2014</td>
+      <td>2025-99-99</td>
+      <td>cosmology physics quantum physics mathematics science</td>
+    </tr>
+    <tr>
+      <td>aa140</td>
+      <td>Pale Fire</td>
+      <td>Vladimir Nabokov</td>
+      <td>1962</td>
+      <td>2025-99-99</td>
+      <td>fiction</td>
+    </tr>
+    <tr>
+      <td>aa139</td>
+      <td>The Genetic Book of the Dead: A Darwinian Reverie</td>
+      <td>Richard Dawkins</td>
+      <td>2024</td>
+      <td>2025-99-99</td>
+      <td>genetics evolutionary biology science</td>
+    </tr>
+    <tr>
+      <td>aa100</td>
+      <td>The Alignment Problem</td>
+      <td>Brian Christian</td>
+      <td>2020</td>
+      <td>2024-99-99</td>
+      <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
       <td>aa138</td>
