--- a/lego/read.html
+++ b/lego/read.html
@@ -231,22 +231,6 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa141</td>
-      <td>Out Mathematical Universe</td>
-      <td>Max Tegmark</td>
-      <td>2014</td>
-      <td>2025-99-99</td>
-      <td>cosmology physics quantum physics mathematics science</td>
-    </tr>
-    <tr>
-      <td>aa140</td>
-      <td>Pale Fire</td>
-      <td>Vladimir Nabokov</td>
-      <td>1962</td>
-      <td>2025-99-99</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>aa139</td>
       <td>The Genetic Book of the Dead: A Darwinian Reverie</td>
       <td>Richard Dawkins</td>
@@ -255,12 +239,52 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
+      <td>aa144</td>
+      <td>Orbital</td>
+      <td>Samantha Harvey</td>
+      <td>2024</td>
+      <td>2025-99-99</td>
+      <td>space fiction sci-fi science fiction</td>
+    </tr>
+    <tr>
+      <td>aa143</td>
+      <td>The Iliad</td>
+      <td>Homer, tr. Emily Wilson</td>
+      <td>2023</td>
+      <td>2025-99-99</td>
+      <td>fiction greek mythology</td>
+    </tr>
+    <tr>
+      <td>aa140</td>
+      <td>Pale Fire</td>
+      <td>Vladimir Nabokov</td>
+      <td>1962</td>
+      <td>2025-01-17</td>
+      <td>fiction</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa141.txt">aa141</a></td>
+      <td>Our Mathematical Universe</td>
+      <td>Max Tegmark</td>
+      <td>2014</td>
+      <td>2025-01-16</td>
+      <td>cosmology physics quantum physics mathematics science</td>
+    </tr>
+    <tr>
       <td>aa100</td>
       <td>The Alignment Problem</td>
       <td>Brian Christian</td>
       <td>2020</td>
       <td>2024-99-99</td>
       <td>artificial intelligence control problem alignment</td>
+    </tr>
+    <tr>
+      <td>aa142</td>
+      <td>Time Travel: A History</td>
+      <td>James Gleick</td>
+      <td>2016</td>
+      <td>2024-99-99</td>
+      <td>time</td>
     </tr>
     <tr>
       <td>aa138</td>
