--- a/lego/read.html
+++ b/lego/read.html
@@ -199,14 +199,6 @@
   </thead>
   <tbody>
     <tr>
-      <td>aa100</td>
-      <td>The Alignment Problem</td>
-      <td>Brian Christian</td>
-      <td>2020</td>
-      <td>2025-99-99</td>
-      <td>artificial intelligence control problem alignment</td>
-    </tr>
-    <tr>
       <td>aa107</td>
       <td>A History of Christianity: The First Three Thousand Years</td>
       <td>Diarmaid MacCulloch</td>
@@ -247,22 +239,6 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td>aa145</td>
-      <td>What an Owl Knows</td>
-      <td>Jennifer Ackerman</td>
-      <td>2023</td>
-      <td>2025-99-99</td>
-      <td>zoology</td>
-    </tr>
-    <tr>
-      <td>aa142</td>
-      <td>Time Travel: A History</td>
-      <td>James Gleick</td>
-      <td>2016</td>
-      <td>2025-99-99</td>
-      <td>time</td>
-    </tr>
-    <tr>
       <td>aa144</td>
       <td>Orbital</td>
       <td>Samantha Harvey</td>
@@ -277,6 +253,30 @@
       <td>2023</td>
       <td>2025-99-99</td>
       <td>fiction greek mythology</td>
+    </tr>
+    <tr>
+      <td>aa100</td>
+      <td>The Alignment Problem</td>
+      <td>Brian Christian</td>
+      <td>2020</td>
+      <td>2025-99-99</td>
+      <td>artificial intelligence control problem alignment</td>
+    </tr>
+    <tr>
+      <td>aa145</td>
+      <td>What an Owl Knows</td>
+      <td>Jennifer Ackerman</td>
+      <td>2023</td>
+      <td>2025-99-99</td>
+      <td>zoology</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa142.txt">aa142</a></td>
+      <td>Time Travel: A History</td>
+      <td>James Gleick</td>
+      <td>2016</td>
+      <td>2025-01-24</td>
+      <td>time</td>
     </tr>
     <tr>
       <td>aa140</td>
