--- a/lego/read.html
+++ b/lego/read.html
@@ -199,20 +199,52 @@
   </thead>
   <tbody>
     <tr>
-      <td>aa107</td>
-      <td>A History of Christianity: The First Three Thousand Years</td>
-      <td>Diarmaid MacCulloch</td>
-      <td>2009</td>
-      <td>2025-99-99</td>
-      <td>christianity religion history catholicism judaism islam</td>
+      <td>aa108</td>
+      <td>Determined</td>
+      <td>Robert M. Sapolsky</td>
+      <td>2023</td>
+      <td>2099-99-99</td>
+      <td>determinism neuroscience free will philosophy biology</td>
+    </tr>
+    <tr>
+      <td>aa099</td>
+      <td>Intuition Pumps and Other Tools for Thinking</td>
+      <td>Daniel C. Dennett</td>
+      <td>2014</td>
+      <td>2099-99-99</td>
+      <td>philosophy</td>
+    </tr>
+    <tr>
+      <td>aa105</td>
+      <td>Lessons</td>
+      <td>Ian McEwan</td>
+      <td>2022</td>
+      <td>2099-99-99</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>aa097</td>
       <td>The Conscious Mind</td>
       <td>David J. Chalmers</td>
       <td>1997</td>
-      <td>2025-99-99</td>
+      <td>2099-99-99</td>
       <td>consciousness philosophy</td>
+    </tr>
+    <tr>
+      <td>aa120</td>
+      <td>Being You: A New Science of Consciousness</td>
+      <td>Anil Seth</td>
+      <td>2021</td>
+      <td>2099-99-99</td>
+      <td>consciousness neuroscience</td>
+    </tr>
+    <tr>
+      <td>aa107</td>
+      <td>A History of Christianity: The First Three Thousand Years</td>
+      <td>Diarmaid MacCulloch</td>
+      <td>2009</td>
+      <td>2025-99-99</td>
+      <td>christianity religion history catholicism judaism islam</td>
     </tr>
     <tr>
       <td>aa129</td>
@@ -268,7 +300,7 @@
       <td>Jennifer Ackerman</td>
       <td>2023</td>
       <td>2025-99-99</td>
-      <td>zoology</td>
+      <td>zoology ecology owls</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa142.txt">aa142</a></td>
@@ -1319,44 +1351,12 @@
       <td>running endurance sports psychology fitness biology</td>
     </tr>
     <tr>
-      <td>aa120</td>
-      <td>Being You: A New Science of Consciousness</td>
-      <td>Anil Seth</td>
-      <td>2021</td>
-      <td>NaN</td>
-      <td>consciousness neuroscience</td>
-    </tr>
-    <tr>
-      <td>aa105</td>
-      <td>Lessons</td>
-      <td>Ian McEwan</td>
-      <td>2022</td>
-      <td>NaN</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
-      <td>aa099</td>
-      <td>Intuition Pumps and Other Tools for Thinking</td>
-      <td>Daniel C. Dennett</td>
-      <td>2014</td>
-      <td>NaN</td>
-      <td>philosophy</td>
-    </tr>
-    <tr>
       <td>aa101</td>
       <td>God: The Most Unpleasant Character in All Fiction</td>
       <td>Dan Barker</td>
       <td>2016</td>
       <td>NaN</td>
       <td>christianity religion bible</td>
-    </tr>
-    <tr>
-      <td>aa108</td>
-      <td>Determined</td>
-      <td>Robert M. Sapolsky</td>
-      <td>2023</td>
-      <td>NaN</td>
-      <td>determinism neuroscience free will philosophy biology</td>
     </tr>
   </tbody>
 </table>
