--- a/lego/read.html
+++ b/lego/read.html
@@ -311,7 +311,7 @@
       <td>time</td>
     </tr>
     <tr>
-      <td>aa140</td>
+      <td><a href="https://jd2504.github.io/lego/aa140.txt">aa140</a></td>
       <td>Pale Fire</td>
       <td>Vladimir Nabokov</td>
       <td>1962</td>
