--- a/lego/read.html
+++ b/lego/read.html
@@ -295,11 +295,11 @@
       <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
-      <td>aa145</td>
+      <td><a href="https://jd2504.github.io/lego/aa145.txt">aa145</a></td>
       <td>What an Owl Knows</td>
       <td>Jennifer Ackerman</td>
       <td>2023</td>
-      <td>2025-99-99</td>
+      <td>2025-01-28</td>
       <td>zoology ecology owls</td>
     </tr>
     <tr>
