--- a/lego/read.html
+++ b/lego/read.html
@@ -207,6 +207,14 @@
       <td>determinism neuroscience free will philosophy biology</td>
     </tr>
     <tr>
+      <td>aa101</td>
+      <td>God: The Most Unpleasant Character in All Fiction</td>
+      <td>Dan Barker</td>
+      <td>2016</td>
+      <td>2099-99-99</td>
+      <td>christianity religion bible</td>
+    </tr>
+    <tr>
       <td>aa099</td>
       <td>Intuition Pumps and Other Tools for Thinking</td>
       <td>Daniel C. Dennett</td>
@@ -239,12 +247,20 @@
       <td>consciousness neuroscience</td>
     </tr>
     <tr>
-      <td>aa107</td>
-      <td>A History of Christianity: The First Three Thousand Years</td>
-      <td>Diarmaid MacCulloch</td>
-      <td>2009</td>
-      <td>2025-99-99</td>
-      <td>christianity religion history catholicism judaism islam</td>
+      <td>aa137</td>
+      <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
+      <td>Jerry A. Fodor</td>
+      <td>2001</td>
+      <td>2099-99-99</td>
+      <td>philosophy mind computational neuroscience psychology</td>
+    </tr>
+    <tr>
+      <td>aa144</td>
+      <td>Orbital</td>
+      <td>Samantha Harvey</td>
+      <td>2024</td>
+      <td>2099-99-99</td>
+      <td>space fiction sci-fi science fiction</td>
     </tr>
     <tr>
       <td>aa129</td>
@@ -255,12 +271,12 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
-      <td>aa137</td>
-      <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
-      <td>Jerry A. Fodor</td>
-      <td>2001</td>
+      <td>aa107</td>
+      <td>A History of Christianity: The First Three Thousand Years</td>
+      <td>Diarmaid MacCulloch</td>
+      <td>2009</td>
       <td>2025-99-99</td>
-      <td>philosophy mind computational neuroscience psychology</td>
+      <td>christianity religion history catholicism judaism islam</td>
     </tr>
     <tr>
       <td>aa139</td>
@@ -269,14 +285,6 @@
       <td>2024</td>
       <td>2025-99-99</td>
       <td>genetics evolutionary biology science</td>
-    </tr>
-    <tr>
-      <td>aa144</td>
-      <td>Orbital</td>
-      <td>Samantha Harvey</td>
-      <td>2024</td>
-      <td>2025-99-99</td>
-      <td>space fiction sci-fi science fiction</td>
     </tr>
     <tr>
       <td>aa143</td>
@@ -293,6 +301,22 @@
       <td>2020</td>
       <td>2025-99-99</td>
       <td>artificial intelligence control problem alignment</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa146.txt">aa146</a></td>
+      <td>The Tragedy of Liberation</td>
+      <td>Frank Dikotter</td>
+      <td>2013</td>
+      <td>2025-99-99</td>
+      <td>cultural revolution china mao communism</td>
+    </tr>
+    <tr>
+      <td>aa147</td>
+      <td>Journey to the Edge of Reason</td>
+      <td>Stephen Budiansky</td>
+      <td>2021</td>
+      <td>2025-99-99</td>
+      <td>godel history mathematics</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa145.txt">aa145</a></td>
@@ -1191,20 +1215,20 @@
       <td>physics science cosmology</td>
     </tr>
     <tr>
-      <td>aa019</td>
-      <td>The Secular Enlightenment</td>
-      <td>Margaret C. Jacob</td>
-      <td>2019</td>
-      <td>2022-03-17</td>
-      <td>enlightenment history</td>
-    </tr>
-    <tr>
       <td>aa020</td>
       <td>The Odyssey</td>
       <td>Homer, tr. Emily Wilson</td>
       <td>2018</td>
       <td>2022-03-17</td>
       <td>greek mythology epic poetry</td>
+    </tr>
+    <tr>
+      <td>aa019</td>
+      <td>The Secular Enlightenment</td>
+      <td>Margaret C. Jacob</td>
+      <td>2019</td>
+      <td>2022-03-17</td>
+      <td>enlightenment history</td>
     </tr>
     <tr>
       <td>aa018</td>
@@ -1349,14 +1373,6 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
-    </tr>
-    <tr>
-      <td>aa101</td>
-      <td>God: The Most Unpleasant Character in All Fiction</td>
-      <td>Dan Barker</td>
-      <td>2016</td>
-      <td>NaN</td>
-      <td>christianity religion bible</td>
     </tr>
   </tbody>
 </table>
