--- a/lego/read.html
+++ b/lego/read.html
@@ -304,15 +304,15 @@
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.txt">aa146</a></td>
-      <td>The Tragedy of Liberation</td>
-      <td>Frank Dikotter</td>
+      <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
+      <td>Frank Dikötter</td>
       <td>2013</td>
       <td>2025-99-99</td>
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
       <td>aa147</td>
-      <td>Journey to the Edge of Reason</td>
+      <td>Journey to the Edge of Reason: The Life of Kurt Gödel</td>
       <td>Stephen Budiansky</td>
       <td>2021</td>
       <td>2025-99-99</td>
