--- a/lego/read.html
+++ b/lego/read.html
@@ -279,12 +279,12 @@
       <td>christianity religion history catholicism judaism islam</td>
     </tr>
     <tr>
-      <td>aa139</td>
-      <td>The Genetic Book of the Dead: A Darwinian Reverie</td>
-      <td>Richard Dawkins</td>
-      <td>2024</td>
+      <td>aa100</td>
+      <td>The Alignment Problem</td>
+      <td>Brian Christian</td>
+      <td>2020</td>
       <td>2025-99-99</td>
-      <td>genetics evolutionary biology science</td>
+      <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
       <td>aa143</td>
@@ -295,14 +295,6 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa100</td>
-      <td>The Alignment Problem</td>
-      <td>Brian Christian</td>
-      <td>2020</td>
-      <td>2025-99-99</td>
-      <td>artificial intelligence control problem alignment</td>
-    </tr>
-    <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.txt">aa146</a></td>
       <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
       <td>Frank Dikötter</td>
@@ -311,11 +303,27 @@
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
+      <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
+      <td>The Genetic Book of the Dead: A Darwinian Reverie</td>
+      <td>Richard Dawkins</td>
+      <td>2024</td>
+      <td>2025-99-99</td>
+      <td>genetics evolutionary biology science</td>
+    </tr>
+    <tr>
+      <td>aa148</td>
+      <td>The Hidden Lives of Owls</td>
+      <td>Leigh Calvez</td>
+      <td>2017</td>
+      <td>2025-99-99</td>
+      <td>zoology ecology owls</td>
+    </tr>
+    <tr>
       <td>aa147</td>
       <td>Journey to the Edge of Reason: The Life of Kurt Gödel</td>
       <td>Stephen Budiansky</td>
       <td>2021</td>
-      <td>2025-99-99</td>
+      <td>2025-02-03</td>
       <td>godel history mathematics</td>
     </tr>
     <tr>
