--- a/lego/read.html
+++ b/lego/read.html
@@ -319,7 +319,7 @@
       <td>zoology ecology owls</td>
     </tr>
     <tr>
-      <td>aa147</td>
+      <td><a href="https://jd2504.github.io/lego/aa147.txt">aa147</a></td>
       <td>Journey to the Edge of Reason: The Life of Kurt Gödel</td>
       <td>Stephen Budiansky</td>
       <td>2021</td>
