--- a/lego/read.html
+++ b/lego/read.html
@@ -2,6 +2,14 @@
 
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWPLPJ3ZCL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-RWPLPJ3ZCL');
+    </script>
     <title>e-book of books</title>
   </head>
 
@@ -182,7 +190,7 @@
     <font size="2" face="Arial" >
       <h1>e-book of books</h1>
 
-      what I've taken from the off the shelf, since 2021...
+      what's come off the shelf, since 2021...
 
     
 
