--- a/lego/read.html
+++ b/lego/read.html
@@ -215,36 +215,20 @@
       <td>determinism neuroscience free will philosophy biology</td>
     </tr>
     <tr>
-      <td>aa101</td>
-      <td>God: The Most Unpleasant Character in All Fiction</td>
-      <td>Dan Barker</td>
-      <td>2016</td>
-      <td>2099-99-99</td>
-      <td>christianity religion bible</td>
-    </tr>
-    <tr>
-      <td>aa099</td>
-      <td>Intuition Pumps and Other Tools for Thinking</td>
-      <td>Daniel C. Dennett</td>
-      <td>2014</td>
-      <td>2099-99-99</td>
-      <td>philosophy</td>
-    </tr>
-    <tr>
-      <td>aa105</td>
-      <td>Lessons</td>
-      <td>Ian McEwan</td>
-      <td>2022</td>
-      <td>2099-99-99</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>aa097</td>
       <td>The Conscious Mind</td>
       <td>David J. Chalmers</td>
       <td>1997</td>
       <td>2099-99-99</td>
       <td>consciousness philosophy</td>
+    </tr>
+    <tr>
+      <td>aa144</td>
+      <td>Orbital</td>
+      <td>Samantha Harvey</td>
+      <td>2024</td>
+      <td>2099-99-99</td>
+      <td>space fiction sci-fi science fiction</td>
     </tr>
     <tr>
       <td>aa120</td>
@@ -263,12 +247,28 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa144</td>
-      <td>Orbital</td>
-      <td>Samantha Harvey</td>
-      <td>2024</td>
+      <td>aa105</td>
+      <td>Lessons</td>
+      <td>Ian McEwan</td>
+      <td>2022</td>
       <td>2099-99-99</td>
-      <td>space fiction sci-fi science fiction</td>
+      <td>fiction</td>
+    </tr>
+    <tr>
+      <td>aa099</td>
+      <td>Intuition Pumps and Other Tools for Thinking</td>
+      <td>Daniel C. Dennett</td>
+      <td>2014</td>
+      <td>2099-99-99</td>
+      <td>philosophy</td>
+    </tr>
+    <tr>
+      <td>aa101</td>
+      <td>God: The Most Unpleasant Character in All Fiction</td>
+      <td>Dan Barker</td>
+      <td>2016</td>
+      <td>2099-99-99</td>
+      <td>christianity religion bible</td>
     </tr>
     <tr>
       <td>aa129</td>
@@ -319,11 +319,19 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td>aa148</td>
+      <td>aa149</td>
+      <td>When Einstein Walked with Gödel</td>
+      <td>Jim Holt</td>
+      <td>2018</td>
+      <td>2025-99-99</td>
+      <td>mathematics logic physics philosophy</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa148.txt">aa148</a></td>
       <td>The Hidden Lives of Owls</td>
       <td>Leigh Calvez</td>
       <td>2017</td>
-      <td>2025-99-99</td>
+      <td>2025-02-04</td>
       <td>zoology ecology owls</td>
     </tr>
     <tr>
