--- a/lego/read.html
+++ b/lego/read.html
@@ -327,7 +327,7 @@
       <td>mathematics logic physics philosophy</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa148.txt">aa148</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa148.html">aa148</a></td>
       <td>The Hidden Lives of Owls</td>
       <td>Leigh Calvez</td>
       <td>2017</td>
